--- a/index.ipynb
+++ b/index.ipynb
@@ -55,10 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
@@ -80,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries = ['Croatia',\n",
@@ -123,13 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = countries[-3] # 'Italy'\n",
     "italy"
    ]
   },
@@ -142,9 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "italy # 'Italy'"
    ]
@@ -158,11 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = None\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
@@ -175,11 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries[1:4]\n",
     "kindof_neighbors"
    ]
   },
@@ -199,11 +237,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # add code here"
+    "# countries.append(\"Malta\")\n",
+    "countries"
    ]
   },
   {
@@ -215,11 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
@@ -231,9 +293,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries \n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
@@ -249,11 +335,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # add code here"
+    "del countries[6]\n",
+    "countries\n",
+    "len(countries\n",
+    "   )"
    ]
   },
   {
@@ -276,9 +376,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'USA',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries = ['Croatia',\n",
     " 'USA',\n",
@@ -294,7 +418,6 @@
     " 'South Korea', \n",
     " 'Malta', \n",
     " 'Thailand']\n",
-    "countries.pop() # 'Thailand'\n",
     "countries\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
@@ -322,20 +445,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Argentina',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
+       " 'South Korea',\n",
+       " 'Thailand',\n",
+       " 'USA'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries # ['USA',  'South Korea',  'Morocco',  'Finland',  'Italy', \n",
     "# 'Mexico',  'Argentina', 'Malta', 'Croatia', 'New Mexico', 'Canada']"
@@ -391,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
